--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~13.1.4",
     "@angular/animations": "~13.1.0",
+    "@angular/cli": "~13.1.4",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
+    "@angular/compiler-cli": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/cli": "~13.1.4",
-    "@angular-devkit/build-angular": "~13.1.4",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.3",
     "jquery": "^3.6.0",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -38,5 +41,9 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0"
+  },
+  "engine": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
   }
 }
